infrastructure/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: sample-app
  # If we don't want to use an ingress, we could expose the service with a load balancer
  # type: LoadBalancer
